@@ -1,3 +1,7 @@
+2008-11-11  Juanma Barranquero  <lekktu@gmail.com>
+
+	* server.el (server-process-filter): Fix typos and reflow docstring.
+
 2008-11-11  Martin Rudalics  <rudalics@gmx.at>
 
 	* mail/footnote.el (footnote-mode): Improve doc-string.
